--- a/src/less/var_style.less
+++ b/src/less/var_style.less
@@ -524,11 +524,19 @@ div.MainMenu ul.menu>li>a {
 }
 
 div.MainMenu ul.menu li.group>a span {
-  background: url("../images/current/menu-down-light.png") no-repeat right center
+  background: url("../images/current/menu-down-light.png") no-repeat right center;
+
+  @media (max-width: @screen-md) {
+    display: none;
+  }
 }
 
 div.MainMenu li.icon-submenu>a>span {
-  background: url("../images/current/bullet03.png") no-repeat right center !important
+  background: url("../images/current/bullet03.png") no-repeat right center !important;
+
+  @media (max-width: @screen-md) {
+    display: none;
+  }
 }
 
 div.MainMenu ul.menu li.group ul li.selected a {
